

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="by.chris.excellent.ex6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex6"
        android:id="@+id/textView14"
        android:layout_gravity="center_horizontal|top" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal|bottom" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_gravity="center">

        <GridLayout
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:columnCount="7"
            android:rowCount="3"
            android:columnOrderPreserved="false"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="false"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp">

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/four"
                android:id="@+id/button10"
                android:layout_row="0"
                android:layout_column="0" />

            <EditText
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText1"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="bottom" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/two"
                android:id="@+id/button17"
                android:layout_row="0"
                android:layout_column="2" />

            <EditText
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_row="1"
                android:layout_column="0" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/five"
                android:id="@+id/button11"
                android:layout_row="1"
                android:layout_column="1" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/seven"
                android:id="@+id/button12"
                android:layout_row="1"
                android:layout_column="2" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/eight"
                android:id="@+id/button14"
                android:layout_row="2"
                android:layout_column="0" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/one"
                android:id="@+id/button13"
                android:layout_row="2"
                android:layout_column="1" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/six"
                android:id="@+id/button15"
                android:layout_row="2"
                android:layout_column="2" />

        </GridLayout>

        <GridLayout
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:columnCount="7"
            android:rowCount="3"
            android:columnOrderPreserved="false"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="false"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp">

            <EditText
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="bottom" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/seven"
                android:id="@+id/button16"
                android:layout_row="0"
                android:layout_column="1" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/six"
                android:id="@+id/button18"
                android:layout_row="0"
                android:layout_column="2" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/nine"
                android:id="@+id/button24"
                android:layout_row="1"
                android:layout_column="0" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/five"
                android:id="@+id/button19"
                android:layout_row="1"
                android:layout_column="1" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/one"
                android:id="@+id/button20"
                android:layout_row="1"
                android:layout_column="2" />

            <EditText
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText4"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="top" />

            <EditText
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText5"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="top" />

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:text="@string/eight"
                android:id="@+id/button23"
                android:layout_row="2"
                android:layout_column="2" />
        </GridLayout>
    </LinearLayout>

</FrameLayout>

