<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="by.chris.excellent.ex9">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex9"
        android:id="@+id/textView16"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:background="@drawable/ex9"
        android:layout_below="@+id/textView16"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true">

        <GridLayout
            android:layout_width="260dp"
            android:layout_height="80dp"
            android:columnCount="5"
            android:rowCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/one"
                android:id="@+id/textView"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/two"
                android:id="@+id/textView2"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/three"
                android:id="@+id/textView3"
                android:layout_column="2"
                android:layout_row="0"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/four"
                android:id="@+id/textView4"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/five"
                android:id="@+id/textView5"
                android:layout_column="4"
                android:layout_row="0"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|text"
                android:ems="10"
                android:id="@+id/editText1"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_rowWeight="1" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:inputType="textCapWords|text" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_rowWeight="1"
                android:inputType="textCapWords|text" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText4"
                android:layout_column="3"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:inputType="textCapWords|text" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText5"
                android:layout_column="4"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:inputType="textCapWords|text" />
        </GridLayout>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
